--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>indique<title>
+    <title>indique</title>
   </head>
   <body>
-    <h1>indique<h1>
+    <h1>indique</h1>
   </body>
 </html>
