--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>indique</title>
   </head>
   <body>
+    <body style="background-image:url(bgimage.jpg)">
     <h1>indique</h1>
   </body>
 </html>
