--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>indique</title>
   </head>
   <body>
-    <body style="background-image:url(bgimage.jpg)">
     <h1>indique</h1>
+    <a href="https://github.com/indique/browser/blob/master/index.html">
+      lesy<img href="https://raw.githubusercontent.com/indique/indique.github.io/master/ungi.png"></img>
+    </a>
   </body>
 </html>
