--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>indique</title>
   </head>
   <body>
     <h1>indique</h1>
-    <a href="https://github.com/indique/browser/blob/master/index.html">
+    <a href="https://indique.github.io/lesy">
       lesy<img href="https://raw.githubusercontent.com/indique/indique.github.io/master/ungi.png"></img>
     </a>
   </body>
